syntax = "proto3";

package netproxy;

/*
 * Each link is uniquely identified by the triple:
 * <endpoint_local_ip, endpoint_remote_ip, connector_name>
 */

enum Str
{
    sensor_ip			= 0; // IP of the sensor
    np_uid				= 1; // NP UID
	endpoint_local_ip	= 2; // Local interface IP
	endpoint_remote_ip	= 3; // Remote interface IP
	connector_name		= 4; // Mockets, TCP, UDP
}

enum Int
{
	bytes_sent			= 0; // Amount of bytes sent in the interval
	bytes_received		= 1; // Amount of bytes received in the interval
}

enum Double
{
	started_seconds		= 0;
	started_nanos		= 1;
	closed_seconds		= 2;
	closed_nanos		= 3;
}