syntax = "proto3";

package process;

option java_package = "us.ihmc.sensei.proto.subjects.process";
option java_generate_equals_and_hash = true;
option java_outer_classname = "Process";

enum Str 
{
    sensor_ip 		= 0; // Ip of the sensor
	process_host_ip	= 1; // Ip of the machine that hosts the process
    process_name 	= 2; // Process Name
	uuid			= 3; // Process UUID
	status 			= 4; // Process status report (STARTED/STOPPED/ERROR)
	description		= 5; // Proces description
}

enum Int 
{
	port 			= 0; // Port the process listens to
}

enum Double {
    started_seconds = 0;
	started_nanos   = 1;
}